--- a/asg2-mainstyles.css
+++ b/asg2-mainstyles.css
@@ -34,4 +34,38 @@ section {
 .song-list ul {
     list-style: none;
 }
+ul.li {
+    padding: 10px;
+}
+#playlist-buttons {
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start; 
+    margin-top: 96px;
+}
+#playlist-buttons button {
+    margin-left: 20px;
+    margin-top: 2px;
+    font-size: 9px;
+}
 
+#snackbar {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    text-align: center;
+    padding: 15px;
+    z-index: 1;
+  }
+
+
+  .tooltip-container {
+    position: fixed;
+    padding: 10px;
+    border-radius: 5px;
+    display: none;
+    z-index: 1;
+    bottom: 20px;
+    left: 50%;
+  }
