--- a/asg2-mainstyles.css
+++ b/asg2-mainstyles.css
@@ -60,12 +60,23 @@ ul.li {
   }
 
 
-  .tooltip-container {
-    position: fixed;
-    padding: 10px;
-    border-radius: 5px;
-    display: none;
+.tooltip-container {
+    position: relative;
+    display: inline-block;
+}
+
+
+.tooltip {
+    position: absolute;
+    visibility: hidden;
+    width: max-content;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
     z-index: 1;
-    bottom: 20px;
-    left: 50%;
-  }
+}
+
+.tooltip-container:hover .tooltip {
+    visibility: visible;
+}
+
