--- a/asg2-mainstyles.css
+++ b/asg2-mainstyles.css
@@ -1,5 +1,5 @@
 html {
-    width: 100%;
+    width: 1280px;
     margin: 0;
     padding: 5px;
 }
@@ -14,7 +14,7 @@ html {
 }
 
 section {
-    display: none;
+    display: none !important;
 }
 
 .popup {
@@ -24,7 +24,7 @@ section {
 }
 
 .show {
-    display: block;
+    display: block !important;
 }
 
 .song-list {
