styling and bug fixes

--- a/asg2-mainstyles.css
+++ b/asg2-mainstyles.css
@@ -70,6 +70,10 @@ ul.li {
     cursor: pointer;
 }
 
+#single-song-view span button, #single-song-view span h2{
+    display: inline;
+}
+
 #snackbar {
     display: none;
     position: fixed;
