--- a/asg2-mainstyles.css
+++ b/asg2-mainstyles.css
@@ -65,7 +65,6 @@ button:hover {
 
 .song-list ul {
     list-style: none;
-    
 }
 
 ul.li {
@@ -85,6 +84,10 @@ ul.li {
     font-size: 10px;
     border: solid gray 1px;
     width: 30px;
+}
+
+#results-list, #artist-list {
+    width: 250px;
 }
 
 #search-body li:nth-child(even), 
@@ -127,9 +130,8 @@ ul.li {
     display: none;
     position: fixed;
     bottom: 0;
-    left: 40%;
+    left: 50%;
     text-align: center;
-    font-size: 30px;
     padding: 15px;
     z-index: 1;
 }
@@ -161,5 +163,4 @@ ul.li {
 .tooltip-container:hover .tooltip {
     visibility: visible;
 }
-
 
