--- a/asg2-mainstyles.css
+++ b/asg2-mainstyles.css
@@ -1,3 +1,9 @@
+/*
+Authors: Ethan Ai, Kushal Saini
+Course: COMP 3612 - 001
+Assignment 2
+*/
+
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
 html {
